# mcp-git-line-stage

./: .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  git-line-stage.py  git_line_stage.py  git_polite.py  pyproject.toml  test_git_line_stage.py  test_git_polite.py
.github/workflows/: docker-build.yml  test.yml
tests/: README.md  run_scenario.sh
tests/cases/: conftest.py  test_apply_changes.py  test_list_changes.py  test_unit.py  test_unstack.py  test_unstack_conflict.py
tests/scenarios/000_base/: Dockerfile
tests/scenarios/001_with_changes/: Dockerfile
tests/scenarios/002_conflict/: Dockerfile
tests/scenarios/003_multiple_commits/: Dockerfile
