[project]
name = "git-line-stage"
version = "0.1.0"
description = "Git line-level staging via MCP - Stage individual changes and partial untracked files with precision"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "uneco" }
]
keywords = ["git", "mcp", "staging", "diff", "line-staging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "mcp>=1.21.1",
]

[project.urls]
Homepage = "https://github.com/uneco/mcp-git-line-stage"
Repository = "https://github.com/uneco/mcp-git-line-stage"
Issues = "https://github.com/uneco/mcp-git-line-stage/issues"

[project.scripts]
git-line-stage = "git_line_stage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["git_line_stage.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
