[project]
name = "git-polite"
version = "0.1.0"
description = "Git line-level staging via MCP - Stage individual changes and partial untracked files with precision"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "uneco" }
]
keywords = ["git", "mcp", "staging", "diff", "line-staging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "fastmcp>=2.13.0.2",
    "mcp>=1.21.1",
]

[project.urls]
Homepage = "https://github.com/uneco/mcp-git-polite"
Repository = "https://github.com/uneco/mcp-git-polite"
Issues = "https://github.com/uneco/mcp-git-polite/issues"

[project.scripts]
git-polite = "git_polite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["git_polite.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
